--- a/Prevu.Synoptics.V4228-RES/PlantView.xaml
+++ b/Prevu.Synoptics.V4228-RES/PlantView.xaml
@@ -80,7 +80,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Canvas.Left="245" Canvas.Top="68"Canvas.Top="68" Width="38" PipeHeight="Medium" StatusComponent="018-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+    <Labels:Pipe Canvas.Left="245" Canvas.Top="68" Width="38" PipeHeight="Medium" StatusComponent="018-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
