V4309: Fix during writing ComponentList

--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P880.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P880.xaml
@@ -55,7 +55,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="22" StatusComponent="920-01-ECS7" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1354" Canvas.Top="387" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="54" StatusComponent="920-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="938" Canvas.Top="373" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="90" StatusComponent="920-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="920" Canvas.Top="390" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -72,7 +72,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="113" StatusComponent="926-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="996" Canvas.Top="116" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="76" RenderTransformOrigin="0.5,0.5" StatusComponent="926-01-MA1" Color="Air" Canvas.Left="814" HorizontalAlignment="Center" VerticalAlignment="Center" Canvas.Top="779"/>
-        <Labels:Pipe Width="294" StatusComponent="920-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="746" Canvas.Top="543" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="258" StatusComponent="920-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="764" Canvas.Top="560" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -207,7 +207,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="74" StatusComponent="920-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="892" Canvas.Top="398" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="74" StatusComponent="920-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="892" Canvas.Top="433" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="76" RenderTransformOrigin="0.5,0.5" StatusComponent="926-01-MA1" Color="Air" Canvas.Left="914" Canvas.Top="779" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="925-01-MA1" Canvas.Left="862" Canvas.Top="743" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" >
             <Labels:Pipe.RenderTransform>
@@ -388,6 +388,7 @@
         <Labels:JumpLabel JumpFromLabel="879-21-CV1" JumpToLabel="878-01-MA1" Canvas.Left="19" Canvas.Top="51" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:JumpLabel JumpFromLabel="890-01-EC1" JumpToLabel="890-01-EC1" Canvas.Left="444" Canvas.Top="51" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:JumpLabel JumpFromLabel="923-01-MA1" JumpToLabel="929-25-CV1" Canvas.Left="1442" Canvas.Top="739" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:JumpLabel JumpFromLabel="882-21-CV1" JumpToLabel="881-01-MA1" Canvas.Left="284" Canvas.Top="697" HorizontalAlignment="Center" VerticalAlignment="Center" />
         <Labels:DetailsLabel ComponentName="880-HOPPER" DetailsPageName="D880" HideComponentName="True" Canvas.Left="393" Canvas.Top="237" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="920-HOPPER" DetailsPageName="D920" HideComponentName="True" Canvas.Left="1035" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="880-62-LEV" Canvas.Left="425" Canvas.Top="237" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -404,8 +405,6 @@
         <Labels:DeviceLabel ComponentName="920-62-LEV" Canvas.Left="1067" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="920-61-LEV" Canvas.Left="937" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="920-01-EC1" Canvas.Left="1005" Canvas.Top="306" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="920-01-ECS6" Canvas.Left="873" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="920-01-ECS7" Canvas.Left="1133" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="920-61-LS4" Canvas.Left="975" Canvas.Top="19" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="923-01-MA1" Canvas.Left="1251" Canvas.Top="693" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="921-01-MA1" Canvas.Left="1404" Canvas.Top="669" HorizontalAlignment="Left" VerticalAlignment="Center" />
@@ -416,6 +415,9 @@
         <Labels:DeviceLabel ComponentName="887-01-MA1" Canvas.Left="667" Canvas.Top="661" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="926-01-MA1" Canvas.Left="1015" Canvas.Top="753" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="925-01-MA1" Canvas.Left="923" Canvas.Top="673" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:JumpLabel JumpFromLabel="882-21-CV1" JumpToLabel="881-01-MA1" Canvas.Left="284" Canvas.Top="697" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="920-01-ECS13" Canvas.Left="1133" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="920-01-ECS10" Canvas.Left="838" Canvas.Top="219" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="920-01-ECS11" Canvas.Left="838" Canvas.Top="285" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="920-01-ECS12" Canvas.Left="838" Canvas.Top="351" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
