--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P890.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P890.xaml
@@ -10,6 +10,7 @@
              x:Class="Prevu.Synoptics.P890" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
+        <Labels:Pipe Width="169" StatusComponent="890-01-ECS7" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="319" Canvas.Top="648" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="74" StatusComponent="890-01-ECS7" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="636" Canvas.Top="631" VisibilityComponent="892-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="57" StatusComponent="890-01-ECS7" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="583" Canvas.Top="631" VisibilityComponent="892-21-CV1" VisibilitySignal="LS2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="24" StatusComponent="890-01-ECS7" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="714" Canvas.Top="595" VisibilityComponent="892-21-CV1" VisibilitySignal="LS2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
@@ -130,7 +131,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="22" StatusComponent="950-01-ECS7" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1354" Canvas.Top="387" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="54" StatusComponent="950-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="938" Canvas.Top="373" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="90" StatusComponent="950-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="920" Canvas.Top="390" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -153,7 +154,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="103" StatusComponent="956-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1006" Canvas.Top="116" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="76" RenderTransformOrigin="0.5,0.5" StatusComponent="956-01-MA1" Color="Air" Canvas.Left="814" HorizontalAlignment="Center" VerticalAlignment="Center" Canvas.Top="779"/>
-        <Labels:Pipe Width="294" StatusComponent="950-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="746" Canvas.Top="543" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="258" StatusComponent="950-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="764" Canvas.Top="560" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -280,7 +281,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="74" StatusComponent="950-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="892" Canvas.Top="398" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="74" StatusComponent="950-01-ECS6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="892" Canvas.Top="433" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="76" RenderTransformOrigin="0.5,0.5" StatusComponent="956-01-MA1" Color="Air" Canvas.Left="914" Canvas.Top="779" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="955-01-MA1" Canvas.Left="862" Canvas.Top="743" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" >
             <Labels:Pipe.RenderTransform>
@@ -508,8 +509,6 @@
         <Labels:DeviceLabel ComponentName="950-62-LEV" Canvas.Left="1067" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="950-61-LEV" Canvas.Left="937" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="950-01-EC1" Canvas.Left="1005" Canvas.Top="306" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="950-01-ECS6" Canvas.Left="873" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="950-01-ECS7" Canvas.Left="1133" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="950-61-LS4" Canvas.Left="975" Canvas.Top="19" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="953-01-MA1" Canvas.Left="1251" Canvas.Top="693" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="951-01-MA1" Canvas.Left="1404" Canvas.Top="669" HorizontalAlignment="Left" VerticalAlignment="Center" />
@@ -520,6 +519,9 @@
         <Labels:DeviceLabel ComponentName="897-01-MA1" Canvas.Left="667" Canvas.Top="661" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="956-01-MA1" Canvas.Left="1015" Canvas.Top="753" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="955-01-MA1" Canvas.Left="923" Canvas.Top="673" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="169" StatusComponent="890-01-ECS7" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="319" Canvas.Top="648" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="950-01-ECS13" Canvas.Left="1133" Canvas.Top="255" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="950-01-ECS10" Canvas.Left="838" Canvas.Top="219" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="950-01-ECS11" Canvas.Left="838" Canvas.Top="285" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="950-01-ECS12" Canvas.Left="838" Canvas.Top="351" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
