--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/PlantView.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/PlantView.xaml
@@ -13,7 +13,7 @@
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"             
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}" >
-    <Canvas Height="1035" Width="2129" >
+    <Canvas Height="1067" Width="2129" >
         <Labels:Pipe Canvas.Left="-181" Canvas.Top="303" Width="504" PipeHeight="Medium" StatusComponent="616-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -39,7 +39,7 @@
         <Machines:QX_ShortElectricalCabinet Width="54" Height="64" Canvas.Left="150" Canvas.Top="392" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="696" Canvas.Top="186" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="74" Canvas.Left="1510" Canvas.Top="186" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:QX_LongElectricalCabinet Width="188" Height="75" Canvas.Left="391" Canvas.Top="706" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:QX_LongElectricalCabinet Width="188" Height="75" Canvas.Left="342" Canvas.Top="706" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:QX_HMI Height="66" Width="56" Canvas.Left="271" Canvas.Top="246" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:QX_HMI Height="66" Width="56" Canvas.Left="149" Canvas.Top="246" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="020" Canvas.Left="396" Canvas.Top="335" HorizontalAlignment="Center" VerticalAlignment="Center"/>
@@ -50,12 +50,12 @@
         <Labels:GroupLabel GroupName="268" Canvas.Left="758" Canvas.Top="335" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="330" Canvas.Left="1462" Canvas.Top="335" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="340" Canvas.Left="1572" Canvas.Top="335" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="540" Canvas.Left="564" Canvas.Top="859" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="530" Canvas.Left="452" Canvas.Top="859" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="540" Canvas.Left="463" Canvas.Top="859" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="530" Canvas.Left="351" Canvas.Top="859" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="350" Canvas.Left="1682" Canvas.Top="335" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="380" Canvas.Left="1682" Canvas.Top="406" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="443" Canvas.Left="1848" Canvas.Top="406" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="557" Canvas.Left="342" Canvas.Top="928" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="557" Canvas.Left="241" Canvas.Top="858" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="608" Canvas.Left="739" Canvas.Top="859" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="810" Canvas.Left="944" Canvas.Top="859" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="890" Canvas.Left="1054" Canvas.Top="928" HorizontalAlignment="Center" VerticalAlignment="Center"/>
@@ -66,7 +66,6 @@
         <Labels:GroupLabel GroupName="460" Canvas.Left="1848" Canvas.Top="475" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="430" Canvas.Left="1848" Canvas.Top="335" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="510" Canvas.Left="1848" Canvas.Top="543" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:GroupLabel GroupName="527" Canvas.Left="342" Canvas.Top="859" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q91" Canvas.Left="985" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="ESTOP-AREA-01" Canvas.Left="132" Canvas.Top="128" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q21" Canvas.Left="384" Canvas.Top="128" HorizontalAlignment="Center" VerticalAlignment="Center"/>
@@ -81,7 +80,7 @@
         <Labels:DeviceLabel ComponentName="S511" Canvas.Left="1559" Canvas.Top="272" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q81" Canvas.Left="670" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q01" Canvas.Left="132" Canvas.Top="328" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="Q71" Canvas.Left="383" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="Q71" Canvas.Left="334" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="S512" Canvas.Left="1669" Canvas.Top="272" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="S610" Canvas.Left="1835" Canvas.Top="272" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="S810" Canvas.Left="725" Canvas.Top="794" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -92,10 +91,10 @@
         <Labels:DeviceLabel ComponentName="S400" Canvas.Left="636" Canvas.Top="272" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q51" Canvas.Left="1503" Canvas.Top="128" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="S210" Canvas.Left="384" Canvas.Top="272" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="S712" Canvas.Left="551" Canvas.Top="794" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="S711" Canvas.Left="440" Canvas.Top="794" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="S712" Canvas.Left="450" Canvas.Top="794" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="S711" Canvas.Left="339" Canvas.Top="794" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="S911" Canvas.Left="1041" Canvas.Top="794" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="S710" Canvas.Left="330" Canvas.Top="794" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="S710" Canvas.Left="229" Canvas.Top="794" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="S211" Canvas.Left="496" Canvas.Top="272" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="S912" Canvas.Left="1152" Canvas.Top="794" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q21-POWER" Canvas.Left="496" Canvas.Top="128" HorizontalAlignment="Center" VerticalAlignment="Center"/>
@@ -104,9 +103,12 @@
         <Labels:DeviceLabel ComponentName="Q42-POWER" Canvas.Left="1339" Canvas.Top="128" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q51-POWER" Canvas.Left="1615" Canvas.Top="128" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q61-POWER" Canvas.Left="1891" Canvas.Top="128" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="Q71-POWER" Canvas.Left="495" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="Q71-POWER" Canvas.Left="446" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q81-POWER" Canvas.Left="782" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="Q91-POWER" Canvas.Left="1097" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="978" Canvas.Left="571" Canvas.Top="859" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="S713" Canvas.Left="558" Canvas.Top="794" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:GroupLabel GroupName="899" Canvas.Left="1054" Canvas.Top="1000" HorizontalAlignment="Center" VerticalAlignment="Top"/>
 
     </Canvas>
 </UserControl>
