--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P970.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P970.xaml
@@ -7,6 +7,7 @@
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              xmlns:lex="http://wpflocalizeextension.codeplex.com"
+             xmlns:Misc="clr-namespace:Prevu.Drawings.Machines.Misc;assembly=Prevu.Drawings"
              x:Class="Prevu.Synoptics.P970"
              lex:ResxLocalizationProvider.DefaultAssembly="Prevu.Localization"
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"             
@@ -52,7 +53,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="54" RenderTransformOrigin="0.5,0.5" StatusComponent="994-01-MA1" Canvas.Left="708" Canvas.Top="654" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="953-01-MA1" Canvas.Left="40" Canvas.Top="504" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="953-01-MA1" Canvas.Left="378" Canvas.Top="506" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="94" RenderTransformOrigin="0.5,0.5" StatusComponent="984-02-MA1" Canvas.Left="767" Canvas.Top="461" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -80,13 +81,13 @@
         <Labels:Pipe Width="86" RenderTransformOrigin="0.5,0.5" StatusComponent="568-01-MA1" Canvas.Left="1038" Canvas.Top="317" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="808-21-CV1" VisibilitySignal="LS1"/>
         <Labels:Pipe Width="86" RenderTransformOrigin="0.5,0.5" StatusComponent="616-01-MA1" Canvas.Left="1038" Canvas.Top="423" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="818-21-CV1" VisibilitySignal="MAT1"/>
         <Labels:Pipe Width="86" RenderTransformOrigin="0.5,0.5" StatusComponent="616-01-MA1" Canvas.Left="1038" Canvas.Top="527" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="818-21-CV1" VisibilitySignal="MAT2"/>
-        <Labels:Pipe Width="64" RenderTransformOrigin="0.5,0.5" StatusComponent="978-01-MA1" Canvas.Left="479" Canvas.Top="267" Color="Air" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="445-01-MA1" Canvas.Left="371" Canvas.Top="43" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="448-01-MA1" Canvas.Left="369" Canvas.Top="133" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="532-01-MA1" Canvas.Left="369" Canvas.Top="225" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="542-01-MA1" Canvas.Left="369" Canvas.Top="315" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="548-01-MA1" Canvas.Left="369" Canvas.Top="407" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="568-01-MA1" Canvas.Left="369" Canvas.Top="497" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="64" RenderTransformOrigin="0.5,0.5" StatusComponent="978-01-MA1" Canvas.Left="142" Canvas.Top="272" Color="Air" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="445-01-MA1" Canvas.Left="34" Canvas.Top="48" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="448-01-MA1" Canvas.Left="32" Canvas.Top="138" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="532-01-MA1" Canvas.Left="32" Canvas.Top="230" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="542-01-MA1" Canvas.Left="32" Canvas.Top="320" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="548-01-MA1" Canvas.Left="32" Canvas.Top="412" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="568-01-MA1" Canvas.Left="32" Canvas.Top="502" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="138" RenderTransformOrigin="0.5,0.5" StatusComponent="976-02-MA1" Canvas.Left="1222" Canvas.Top="553" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -108,18 +109,18 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="64" RenderTransformOrigin="0.5,0.5" StatusComponent="976-01-MA1" Canvas.Left="146" Canvas.Top="269" Color="Air" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-EC1" Canvas.Left="40" Canvas.Top="316" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="883-01-MA1" Canvas.Left="40" Canvas.Top="406" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="923-01-MA1" Canvas.Left="40" Canvas.Top="490" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-EC1" Canvas.Left="40" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Top="46"/>
-        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="890-01-EC1" Canvas.Left="40" Canvas.Top="136" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="920-01-EC1" Canvas.Left="40" Canvas.Top="227" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Rectangle Height="487" Stroke="Black" Width="8" Fill="Gray" RenderTransformOrigin="0.5,0.5" Canvas.Left="146" Canvas.Top="36" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="64" RenderTransformOrigin="0.5,0.5" StatusComponent="976-01-MA1" Canvas.Left="484" Canvas.Top="271" Color="Air" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-EC1" Canvas.Left="378" Canvas.Top="318" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="883-01-MA1" Canvas.Left="378" Canvas.Top="408" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="923-01-MA1" Canvas.Left="378" Canvas.Top="492" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-EC1" Canvas.Left="378" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Top="48"/>
+        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="890-01-EC1" Canvas.Left="378" Canvas.Top="138" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="920-01-EC1" Canvas.Left="378" Canvas.Top="229" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Rectangle Height="487" Stroke="Black" Width="8" Fill="Gray" RenderTransformOrigin="0.5,0.5" Canvas.Left="484" Canvas.Top="38" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle Height="514" Stroke="Black" Width="8" Fill="Gray" RenderTransformOrigin="0.5,0.5" Canvas.Left="922" Canvas.Top="33" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="748" Stroke="Black" Width="8" Fill="Gray" RenderTransformOrigin="0.5,0.5" Canvas.Left="1385" Canvas.Top="43" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Rectangle Height="484" Stroke="Black" Width="8" Fill="Gray" RenderTransformOrigin="0.5,0.5" Canvas.Left="475" Canvas.Top="31" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_EC_FiltroManiche Canvas.Left="184" Canvas.Top="255" Width="134" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Rectangle Height="484" Stroke="Black" Width="8" Fill="Gray" RenderTransformOrigin="0.5,0.5" Canvas.Left="138" Canvas.Top="36" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_EC_FiltroManiche Canvas.Left="522" Canvas.Top="257" Width="134" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_EC_FiltroManiche Canvas.Left="1213" Canvas.Top="307" Width="134" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
             <Machines:V01_EC_FiltroManiche.RenderTransform>
                 <TransformGroup>
@@ -134,7 +135,7 @@
                 </TransformGroup>
             </Machines:V01_EC_FiltroManiche.RenderTransform>
         </Machines:V01_EC_FiltroManiche>
-        <Machines:V01_EC_FiltroManiche Canvas.Left="521" Canvas.Top="252" Width="134" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_EC_FiltroManiche Canvas.Left="184" Canvas.Top="256" Width="134" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_CV_Valve Canvas.Left="1002" Canvas.Top="307" Height="24" Width="46" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_CV_Valve Canvas.Left="1002" Canvas.Top="413" Height="24" Width="46" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_CV_Valve Canvas.Left="1002" Canvas.Top="517" Height="24" Width="46" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -142,22 +143,22 @@
         <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="501" Canvas.Top="646" Width="158" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_BBF_SingleBag Canvas.Left="655" Canvas.Top="682" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="976-FILTER" DetailsPageName="D976" Canvas.Left="1263" Canvas.Top="249" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DetailsLabel ComponentName="970-FILTER" DetailsPageName="D970" Canvas.Left="220" Canvas.Top="198" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DetailsLabel ComponentName="970-FILTER" DetailsPageName="D970" Canvas.Left="558" Canvas.Top="200" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="992-BAG" DetailsPageName="D992" HideComponentName="True" Canvas.Left="739" Canvas.Top="787" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="984-FILTER" DetailsPageName="D984" Canvas.Left="786" Canvas.Top="198" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DetailsLabel ComponentName="978-FILTER" DetailsPageName="D978" Canvas.Left="555" Canvas.Top="197" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DetailsLabel ComponentName="978-FILTER" DetailsPageName="D978" Canvas.Left="218" Canvas.Top="202" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="830-21-CV1" Canvas.Left="982" Canvas.Top="545" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="820-21-CV1" Canvas.Left="982" Canvas.Top="441" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="810-21-CV1" Canvas.Left="982" Canvas.Top="335" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="994-01-MA1" Canvas.Left="729" Canvas.Top="588" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="992-01-MA1" Canvas.Left="593" Canvas.Top="588" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="992-62-BAG" Canvas.Left="641" Canvas.Top="787" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:JumpLabel Canvas.Left="22" Canvas.Top="284" JumpFromLabel="950-01-EC1" JumpToLabel="950-01-EC1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpToLabel="929-25-CV1" Canvas.Left="22" Canvas.Top="465" JumpFromLabel="929-25-CV1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpToLabel="899-25-CV1" Canvas.Left="22" Canvas.Top="373" JumpFromLabel="899-25-CV1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel Canvas.Left="22" JumpFromLabel="880-01-EC1" JumpToLabel="880-01-EC1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Top="14"/>
-        <Labels:JumpLabel JumpToLabel="920-01-EC1" Canvas.Left="22" Canvas.Top="195" JumpFromLabel="920-01-EC1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpToLabel="890-01-EC1" Canvas.Left="22" Canvas.Top="103" JumpFromLabel="890-01-EC1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel Canvas.Left="360" Canvas.Top="286" JumpFromLabel="950-01-EC1" JumpToLabel="950-01-EC1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpToLabel="929-25-CV1" Canvas.Left="360" Canvas.Top="467" JumpFromLabel="929-25-CV1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpToLabel="899-25-CV1" Canvas.Left="360" Canvas.Top="375" JumpFromLabel="899-25-CV1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel Canvas.Left="360" JumpFromLabel="880-01-EC1" JumpToLabel="880-01-EC1" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Top="16"/>
+        <Labels:JumpLabel JumpToLabel="920-01-EC1" Canvas.Left="360" Canvas.Top="197" JumpFromLabel="920-01-EC1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpToLabel="890-01-EC1" Canvas.Left="360" Canvas.Top="105" JumpFromLabel="890-01-EC1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel Canvas.Left="1441" Canvas.Top="291" JumpFromLabel="896-01-MA1" JumpToLabel="896-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
         <Labels:JumpLabel JumpToLabel="926-01-MA1" Canvas.Left="1441" Canvas.Top="471" JumpFromLabel="926-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
         <Labels:JumpLabel JumpToLabel="898-01-MA1" Canvas.Left="1441" Canvas.Top="379" JumpFromLabel="898-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
@@ -173,12 +174,21 @@
         <Labels:JumpLabel JumpToLabel="810-01-MA1" Canvas.Left="1094" Canvas.Top="285" JumpFromLabel="810-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
         <Labels:JumpLabel JumpToLabel="820-01-MA1" Canvas.Left="1094" Canvas.Top="391" JumpFromLabel="820-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
         <Labels:JumpLabel JumpToLabel="830-01-MA1" Canvas.Left="1094" Canvas.Top="495" JumpFromLabel="830-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
-        <Labels:JumpLabel Canvas.Left="351" Canvas.Top="11" JumpFromLabel="446-01-MA1" JumpToLabel="446-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpToLabel="532-01-MA1" Canvas.Left="351" Canvas.Top="193" JumpFromLabel="532-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpToLabel="449-01-MA1" Canvas.Left="351" Canvas.Top="101" JumpFromLabel="449-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpToLabel="542-01-MA1" Canvas.Left="351" Canvas.Top="283" JumpFromLabel="542-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpToLabel="556-01-MA1" Canvas.Left="351" Canvas.Top="375" JumpFromLabel="556-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpToLabel="600-01-MA1" Canvas.Left="351" Canvas.Top="465" JumpFromLabel="600-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel Canvas.Left="14" Canvas.Top="16" JumpFromLabel="446-01-MA1" JumpToLabel="446-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpToLabel="532-01-MA1" Canvas.Left="14" Canvas.Top="198" JumpFromLabel="532-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpToLabel="449-01-MA1" Canvas.Left="14" Canvas.Top="106" JumpFromLabel="449-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpToLabel="542-01-MA1" Canvas.Left="14" Canvas.Top="288" JumpFromLabel="542-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpToLabel="556-01-MA1" Canvas.Left="14" Canvas.Top="380" JumpFromLabel="556-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpToLabel="600-01-MA1" Canvas.Left="14" Canvas.Top="470" JumpFromLabel="600-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBlock Width="94" VerticalAlignment="Top" Canvas.Top="710" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="228" Height="50" HorizontalAlignment="Center" FontSize="36" FontWeight="Bold" Foreground="Black"><Run Text="S71"/><Run Language="it-it" Text="3"/></TextBlock>
+        <TextBlock Width="94" VerticalAlignment="Top" Canvas.Top="710" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="354" Height="50" HorizontalAlignment="Center" FontSize="36" FontWeight="Bold" Foreground="Black"><Run Text="S"/><Run Text="9"/><Run Text="1"/><Run Language="it-it" Text="2"/></TextBlock>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="800" Canvas.Left="-62" Canvas.Top="409" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Misc:DashedLine.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Misc:DashedLine.RenderTransform>
+        </Misc:DashedLine>
     </Canvas>
 
 </UserControl>
